QE-1250: Fix missing padding on all LS6 sides (#4076)

--- a/assets/admin_themes/Sea_Green/admin_customizations.scss
+++ b/assets/admin_themes/Sea_Green/admin_customizations.scss
@@ -169,11 +169,6 @@ blockquote {
   padding-right: $container-padding;
 }
 
-.container-fluid#in_survey_common_action {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
 .full-page-wrapper {
   position: relative;
   padding-bottom: 65px;
